--- a/static/index.html
+++ b/static/index.html
@@ -4,6 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="icon" href="https://github.com/ChecInstont/AI-skills-courses-recommendation/blob/a742b016322bfdbf435757ce1e7676c808889635/static/logo.png"/>
     <title>Job Skills Finder</title>
     <style>
         * {
